# AITrener2

./: .gitignore  .replit  README.md  VideoPlayerDesktop.spec  config_screen.py  debug.txt  flask_app.log.1  flask_app.log.3  main.py  playback_screen.py  pyproject.toml  replit.nix  video_config.py  video_player.py  web_app.py
static/: video_config.json
templates/: config.html  playback.html  stats.html
